@@ -4,6 +4,8 @@ Revision history for {{ $dist->name }}
   [Incompatible Changes]
   - Support for Perls before v5.10 has been removed.
 
+  - Size parameters of 0 will not be overridden, and may throw errors.
+
 v0.4.1    2022-04-21 14:00:49+01:00 Europe/London
   [Bug Fixes]
   - Char with no size parameter should default to 1. N.B. this may be an incompatible change.
